ctowasm/test/samples/error/declarations/empty_declaration.c
// Test empty declaration. Violates 6.7.2/2 of C17 standard.
int main() {
  int;
}